2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg: Update to the latest version of CLooG.

2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/devel/configure.cfg,
	* config/base/configure.cfg: Fix a typo.

	* config/local/configure.cfg,
	* config/stable/configure.cfg: Upgrade to candl-0.6.0.

2011-07-13  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>
	This patch moves every occurence of piplib use to piplib-hybrid, a
	new piplib version that automatically adapts to MP integer in case
	of overflow with long long int.

	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am,
	* config/devel/configure.cfg,
	* config/devel/driver.cfg,
	* config/base/configure.cfg,
	* config/base/driver.cfg,
	* config/local/configure.cfg,
	* config/local/driver.cfg,
	* config/sable/configure.cfg,
	* config/sable/driver.cfg: Use piplib-hybrid in place of piplib.

2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Fix a bug in the handling of
	statements surrounded by no loop.

2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/stable/configure.cfg,
	* config/local/configure.cfg: Update to candl-0.5.1.

2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/include/pocc/driver-pastops.h,
	* driver/pocc/driver-pastops.c: New. Unit to control the PAST
	post-processing and pretty-printing.
	* driver/Makefile.am: Update accordingly.

	* driver/pocc/driver-codegen.c,
	* driver/pocc/driver-clastops.c: Update to use the new PAST
	driver.

2011-07-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* tests/scripts/checker_correctness.sh: New. Script to check the
	correctness of pocc-generated code, against polybench 2.1.
	* tests/Makefile.am: Update accordingly, add rule 'correctness-check'.

	* bin/pocc-checkout: Fix a problem when checkouting local/stable
	modes.
